# rime

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .rgignore  Dockerfile  README-Windows.md  README.md  check_dependencies.py  docker-compose.yml  make_release.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_dev.sh
Windows/: .gitignore  EmbedPython.cpp  EmbedPython.h  Rime.cpp  Rime.rc  Rime.sln  Rime.vcxproj  Rime.vcxproj.filters  RimePython.cpp  RimePython.h  Ring.h  Splash.cpp  Splash.h  packages.config  resource.h
docs/: quickstart.rst
frontend/: .env.production  .prettierrc.yaml  eslint.config.js  package-lock.json  package.json  rime_settings.yaml  rimeserver.py  vite.config.js
frontend/src/: App.vue  main.js  store.js  style.css
frontend/src/components/: ContactCardSmall.vue  DeviceChooser.vue  DeviceDecryptWidget.vue  HelloWorld.vue  ProviderChooser.vue  Search.vue  SearchResultMediaEvent.vue  SearchResultMessageEvent.vue  SearchResults.vue  SearchResultsMedia.vue  SearchViewChooser.vue  (+2 more)
release_deps/: launch.py  rime_settings.dist.yaml
rime/: __init__.py  __main__.py  anonymise.py  config.py  device.py  graphql.py  metadata.py  rime.py  rimeserver.py  schema.graphql  sql.py
rime/filesystem/: android.py  base.py  devicesettings.py  direntry.py  fslibfilesystem.py  ios.py  metadata.py  registry.py  zipsupport.py
rime/plugins/: __init__.py  ai_requirements.txt
rime/providers/: androidcontacts.py  androidgenericmedia.py  androidtelephony.py  androidwhatsapp.py  imessage.py  ioscontacts.py  ioswhatsapp.py
tests/: conftest.py
